fix(ui): prevent text movement on switch to RO
Tex shouldn't move between RO and editable.
This makes alignments in registers pane look weird.

Closes #330.

--- a/ui/js-converters/packages/ui/converters/src/UnicodeConverter/UnicodeConverter.scss
+++ b/ui/js-converters/packages/ui/converters/src/UnicodeConverter/UnicodeConverter.scss
@@ -1,11 +1,7 @@
 .UnicodeConverter {
   font-family: 'Courier New', Courier, monospace;
   .Input-ro {
-    border-top-style: hidden;
-    border-right-style: hidden;
-    border-left-style: hidden;
-    border-bottom-style: hidden;
-    outline: none;
+    border-color: transparent;
     caret-color: transparent;
   }
   .Input-ro:hover {
